cabal-version:       2.2

name:                impossible922
version:             0.1.0.0
synopsis:
description:
bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Adam Conner-Sax
maintainer:          adam_conner_sax@yahoo.com
copyright:           2022 Adam Conner-Sax
category:            Data
extra-source-files:  CHANGELOG.md
Build-type: Simple

source-repository head
    Type: git
    Location: https://github.com/adamConnerSax/impossible922

library
  ghc-options: -Wall -funbox-strict-fields
  exposed-modules: Impossible

  build-depends: Frames               >= 0.6.1 && < 0.8,
                 base                 >= 4.12.0 && < 4.17,
                 containers           >= 0.5.0 && < 0.7,
                 hashable             >= 1.2.7 && < 1.5,
                 vinyl                >= 0.11.0 && < 0.15,
  hs-source-dirs:      src
  default-language:    Haskell2010
